8211100: hotspot C1 issue with comparing long numbers on x86 32-bit

Reviewed-by: iveresov, thartmann